
    - Add extension methods for handling port forwarding to the CloudStack
      driver, rename CloudStackForwardingRule class to
      CloudStackIPForwardingRule. (LIBCLOUD-383)
      [sebastien goasguen]

    - Hook up deploy_node functionality in the CloudStack driver and unify
      extension arguments for handling security groups. (LIBCLOUD-388)
      [sebastien goasguen]

  *) Storage

    - Allow users to filter objects starting with a prefix by passing ex_prefix
      argument to the list_container_objects method in the S3, Google Storage
      and CloudFiles driver. (LIBCLOUD-369)
      [Stefan Friesel]

    - Store last_modified timestamp in the Object extra dictionary in the S3
      driver. (LIBCLOUD-373)
      [Stefan Friesel]

  *) Load Balancer

   - Expose CloudStack driver directly through the Provider.CLOUDSTACK
     constant.
     [Tomaz Muraus]

 *) DNS

   - Modify Zerigo driver to include record TTL in the record 'extra' attribute
     if a record has a TTL set.
     [Tomaz Muraus]

   - Modify values in the Record 'extra' dictionary attribute in the Zerigo DNS
     driver to be set to None instead of an empty string ('') if a value for
     the provided key is not set.
     [Tomaz Muraus]

Changes with Apache Libcloud 0.13.1

 *) General

    - Fix a regression introduced in 0.13.0 and make sure to include
      Content-Length 0 with PUT and POST requests. (LIBCLOUD-362, LIBCLOUD-390)
      [Tomaz Muraus]

 *) Compute

    - Fix a bug in the ElasticHosts driver and check for right HTTP status
      code when determining drive imaging success. (LIBCLOUD-363)
      [Bob Thompson]

    - Update Opsource driver to include node public ip address (if available).
      (LIBCLOUD-384)
      [Michael Bennett]

  *) Storage

    - Fix a regression with calling encode_container_name instead of
      encode_object_name on object name in get_object method.
      Reported by Ben Meng (LIBCLOUD-366)
      [Tomaz Muraus]
