@@ -75,6 +75,11 @@ Changes with Apache Libcloud in development
       extension arguments for handling security groups. (LIBCLOUD-388)
       [sebastien goasguen]
 
+    - Allow user to pass "args" argument to the ScriptDeployment class. This
+      argument tells which arguments get passed to the ScriptDeployment
+      script. (LIBCLOUD-394)
+      [Tomaz Muraus]
+
   *) Storage
 
     - Allow users to filter objects starting with a prefix by passing ex_prefix
